renamed the js file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <footer>
     Made with <img class="js-icon" src="images/js.png" alt="js"> by Arjun
   </footer>
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
